force-app/main/default/objects/conference360__Expense_Entry__c/fields/conference360__Amount__c.field-meta.xml
<CustomField>
    <fullName>conference360__Amount__c</fullName>
    <description>The Amount of this Expense.</description>
    <inlineHelpText>The Amount of this Expense.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>