force-app/main/default/objects/conference360__Expense_Entry__c/fields/conference360__Budget_Expense__c.field-meta.xml
<CustomField>
    <fullName>conference360__Budget_Expense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Budget and Expense record related to this Expense Entry.</description>
    <inlineHelpText>The Budget and Expense record related to this Expense Entry.</inlineHelpText>
    <label>Budget &amp; Expense</label>
    <referenceTo>conference360__Budget_Expense__c</referenceTo>
    <relationshipLabel>Expense Entries</relationshipLabel>
    <relationshipName>Expense_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>