force-app/main/default/objects/conference360__Expense_Entry__c/fields/conference360__Category__c.field-meta.xml
<CustomField>
    <fullName>conference360__Category__c</fullName>
    <description>The Category related to this Expense Entry. Auto-populates when saving if this Entry is related to a Budget &amp; Expense record that has the Category populated.</description>
    <inlineHelpText>The Category related to this Expense Entry. Auto-populates when saving if this Entry is related to a Budget &amp; Expense record that has the Category populated.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Audiovisual (AV)</fullName>
            </value>
            <value>
                <fullName>Catering (F&amp;B)</fullName>
            </value>
            <value>
                <fullName>Decor</fullName>
            </value>
            <value>
                <fullName>Site Rental</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Production &amp; Staff</fullName>
            </value>
            <value>
                <fullName>Marketing (Social)</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Contingency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>