force-app/main/default/objects/conference360__Expense_Entry__c/fields/conference360__Description__c.field-meta.xml
<CustomField>
    <fullName>conference360__Description__c</fullName>
    <description>The Description for this Expense Entry.</description>
    <inlineHelpText>The Description for this Expense Entry.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>