force-app/main/default/objects/conference360__Expense_Entry__c/fields/conference360__Event__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Event related to this Expense Entry. Auto-populates when saving if this Entry is related to a Budget &amp; Expense record that has the Event populated.</description>
    <inlineHelpText>The Event related to this Expense Entry. Auto-populates when saving if this Entry is related to a Budget &amp; Expense record that has the Event populated.</inlineHelpText>
    <label>Event</label>
    <referenceTo>conference360__Event__c</referenceTo>
    <relationshipLabel>Expense Entries</relationshipLabel>
    <relationshipName>Expense_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>