force-app/main/default/objects/conference360__Expense_Entry__c/fields/conference360__Subcategory__c.field-meta.xml
<CustomField>
    <fullName>conference360__Subcategory__c</fullName>
    <description>The Subcategory related to this Expense Entry. Auto-populates when saving if this Entry is related to a Budget &amp; Expense record that has the Subcategory populated.</description>
    <inlineHelpText>The Subcategory related to this Expense Entry. Auto-populates when saving if this Entry is related to a Budget &amp; Expense record that has the Subcategory populated.</inlineHelpText>
    <label>Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>conference360__Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Microphones</fullName>
            </value>
            <value>
                <fullName>Screens and Projectors</fullName>
            </value>
            <value>
                <fullName>Internet and WiFi</fullName>
            </value>
            <value>
                <fullName>Meals</fullName>
            </value>
            <value>
                <fullName>Beverage</fullName>
            </value>
            <value>
                <fullName>Bartending/Server</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Gratuity</fullName>
            </value>
            <value>
                <fullName>Lighting</fullName>
            </value>
            <value>
                <fullName>Flowers and centerpieces</fullName>
            </value>
            <value>
                <fullName>Balloons</fullName>
            </value>
            <value>
                <fullName>Venue/Room</fullName>
            </value>
            <value>
                <fullName>Security deposit</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Linens, Table Skirting, and Chair Covers</fullName>
            </value>
            <value>
                <fullName>Tents, Staging, and Amusement Attractions</fullName>
            </value>
            <value>
                <fullName>Physical Items Not Provided by Venue</fullName>
            </value>
            <value>
                <fullName>Labor and Delivery for Setup/Teardown</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>Contract Riders (Food, Lodging, Transportation)</fullName>
            </value>
            <value>
                <fullName>Salaried Employee Assignments</fullName>
            </value>
            <value>
                <fullName>Accounting Fees</fullName>
            </value>
            <value>
                <fullName>Legal Fees</fullName>
            </value>
            <value>
                <fullName>Consultant Fees</fullName>
            </value>
            <value>
                <fullName>Part-time and Temporary Employees</fullName>
            </value>
            <value>
                <fullName>Speaker Fees</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Event Planner</fullName>
            </value>
            <value>
                <fullName>Office Supplies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>