force-app/main/default/objects/conference360__Expense_Entry__c/fields/conference360__Vendor_Account__c.field-meta.xml
<CustomField>
    <fullName>conference360__Vendor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Vendor this Expense was paid to.</description>
    <inlineHelpText>The Vendor this Expense was paid to.</inlineHelpText>
    <label>Vendor (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expense Entries</relationshipLabel>
    <relationshipName>Expense_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>